add inline comments

--- a/server/rs-server.conf
+++ b/server/rs-server.conf
@@ -1,2 +1,3 @@
-SERVER_REPO="/repo/"
-CLIENT_REPO="/var/www/yum/"
+SERVER_REPO="/repo/"            # location on server to download files
+CLIENT_REPO="/var/www/yum/"     # location on client of YUM repo
+
