add variable to identify source repo

--- a/server/rs-server.conf
+++ b/server/rs-server.conf
@@ -1,3 +1,7 @@
+# Server variables
 SERVER_REPO="/repo/"            # location on server to download files
+SRC_REPO="rhel-6-server-defaults"
+
+# Client variables
 CLIENT_REPO="/var/www/yum/"     # location on client of YUM repo
 
