add file operations

--- a/server/rs-server.conf
+++ b/server/rs-server.conf
@@ -1,5 +1,6 @@
 # Server variables
 SERVER_REPO="/repo/"            # location on server to download files
+UPDATE_LOC="/repo/update"
 SRC_REPO="rhel-6-server-defaults"
 
 # Client variables
