--- a/server/rs-server.conf
+++ b/server/rs-server.conf
@@ -1,7 +1,7 @@
 # Server variables
 SERVER_REPO="/repo/"            # location on server to download files
 UPDATE_LOC="/repo/update"
-SRC_REPO="rhel-6-server-defaults"
+SRC_REPO="rhel-7-server-rpms"
 
 # Client variables
 CLIENT_REPO="/var/www/yum/"     # location on client of YUM repo
