update user config variable names and comments fix manifest list to include full directory path fixes #6

--- a/rs-server.conf
+++ b/rs-server.conf
@@ -1,8 +1,8 @@
 # Server variables
-SERVER_REPO="/repo/"            # location on server to download files
-UPDATE_LOC="/repo/update"
-SRC_REPO="rhel-7-server-rpms"
+SERVER_REPO="/repo"            # location on server to download files (no trailing slash)
+UPDATE_LOC="/repo/update"      # location on server to save incremental updates (no trailing slash)
+REPO_ID="rhel-7-server-rpms"   # id of repo to sync from online server
 
 # Client variables
-CLIENT_REPO="/var/www/yum/"     # location on client of YUM repo
+CLIENT_REPO="/var/www/yum"     # location on client of YUM repo (no trailing slash)
 
