--- a/.github/ISSUE_TEMPLATE/report-a-bug.yml
+++ b/.github/ISSUE_TEMPLATE/report-a-bug.yml
@@ -22,33 +22,12 @@ body:
       - Other unexpected behaviour
   validations:
     required: true
-
-- type: input
+- type: textarea
   attributes:
     label: "Version Output"
     description: Run `./repr version` in the console, then copy and paste the full output of the command into this box.
   validations:
     required: true
-- type: input
-  attributes:
-    label: Server startup log
-    description: Upload your server startup log (from the start of `latest.log` up to where it says "Done!") to either https://paste.gg or https://gist.github.com, save and then paste the link in this box.
-    placeholder: "Example: https://paste.gg/p/anonymous/109dd6a10a734a3aa430d5a351ea5210"
-  validations:
-    required: true
-- type: input
-  attributes:
-    label: EssentialsX config files
-    description: Upload your EssentialsX `config.yml` (and any other relevant files like `kits.yml`) to either https://paste.gg or https://gist.github.com, save and then paste the link in this box. If you included those files in the same paste as your startup log, paste the same link here.
-    placeholder: "Example: https://paste.gg/p/anonymous/109dd6a10a734a3aa430d5a351ea5210"
-  validations:
-    required: true
-- type: input
-  attributes:
-    label: Error log (if applicable)
-    description: If you are reporting a console error, upload any relevant log excerpts to either https://paste.gg or https://gist.github.com, save and the paste the link in this box. If you included those files in the same paste as your startup log, paste the same link here.
-    placeholder: "Example: https://paste.gg/p/anonymous/109dd6a10a734a3aa430d5a351ea5210"
-
 - type: textarea
   attributes:
     label: Bug description
